--- a/src/components/Userstudy/ReTraining/Training1/Training1.css
+++ b/src/components/Userstudy/ReTraining/Training1/Training1.css
@@ -1,67 +1,57 @@
-/* .training-container {
-  text-align: left;
-  margin: 1% 13%;
-  flex-direction: column;
-  font-size: 1.5em;
-  font-weight: bold;
-  font-family: "FUTURAL", "Segoe UI", sans-serif;
-} */
-.chart {
+.chart1 {
   display: inline-block;
-  margin: 1% 0% 1% 1%;
+  margin: 2% 4% 1% 4%;
 }
 
-.chart-title {
+.chart1-title {
   display: inline-block;
   font-size: 1.1em;
   text-align: left;
   font-weight: normal;
   font-family: "FUTURAL", "Segoe UI", sans-serif;
 }
-.chart-image {
+.chart1-image {
   width: 300px;
   margin: 0% 0 0% 1%;
   vertical-align: top;
 }
-.chart-video {
+.chart1-video {
   width: 300px;
-  margin: 0% 0 0% 1%;
+  margin: 0% 0% 0% 1%;
   vertical-align: top;
 }
-.chart-des {
+.chart1-des {
   display: inline-block;
   margin: 1% 0% 1% 1%;
   width: 700px;
   text-align: left;
-  font-size:11pt;
+  font-size: 11pt;
   font-family: "FUTURAL", "Segoe UI", sans-serif;
   line-height: 20px;
 }
-.chart-list{
+.chart1-list {
   font-size: small;
 }
-.button{
-  display:flex;
+.button {
+  display: flex;
   margin: 1% 0% 1% 30%;
 }
-.cast-btn{
+.cast-btn {
   padding: 1.4% 1.4%;
-  background-color:#007acd;
+  background-color: #007acd;
   color: #fff;
   text-transform: uppercase;
-  border: .5px solid #dee1e4;
+  border: 0.5px solid #dee1e4;
   transition: all 0.2s linear;
   /* 水平居中 */
   margin: 0 3% 0 0;
-  
-
 }
-.cast-btn:hover{
+.cast-btn:hover {
   cursor: pointer;
   transform: scale(1.05);
   transition: all 0.2s linear;
 }
-.next-re{
+.next-re {
   padding: 0.4% 1.4%;
   background-color: rgba(72, 121, 255, 0.874);
   color: #fff;
@@ -72,10 +62,8 @@
   /* 水平居中 */
   /* margin: 0 10%; */
 }
-.next-re:hover{
+.next-re:hover {
   cursor: pointer;
   transform: scale(1.05);
   transition: all 0.2s linear;
 }
-
-
