--- a/src/components/Userstudy/Option3/Option3.css
+++ b/src/components/Userstudy/Option3/Option3.css
@@ -12,8 +12,9 @@
   border: 1px solid #afaaaa;
 }
 .option-image {
-  height: 20%;
-  width: 70%;
+  margin-left: 30px;
+height: 140px;
+width: 1800px;
 }
 .option-item-container {
   display: inline-flex;
@@ -23,4 +24,7 @@
   justify-content: center;
   align-items: baseline;
   flex-wrap: wrap;
+}
+.readingTraining0:hover{
+  cursor: pointer;
 }
