--- a/src/components/Tutorial/Tutorial.css
+++ b/src/components/Tutorial/Tutorial.css
@@ -69,6 +69,9 @@ ul {
   padding-bottom: 3em;
   flex: 1 1 auto;
 }
+.tutorial-content:hover{
+  cursor: default;
+}
 .tutorialh {
   text-align: left;
   vertical-align: middle;
