--- a/src/components/Gallery/GalleryPage/GalleryPage.css
+++ b/src/components/Gallery/GalleryPage/GalleryPage.css
@@ -8,22 +8,23 @@
     position: relative;
 }
 .detail-img {
-    max-width: 400px;
-    height: auto;
-    display: inline-flex;   
+    margin-right: 8%;
+    height: 400px;
 }
 .detail-pre{
-    max-width: 400px;
-    /* height: auto; */
+    height: 400px;
     border: 1px solid #ccc;
 }
 .detail-chart{
-    margin: 1% 26%;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: 2% 18%;
+    text-align: left;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 600;
 }
-
+.detail-video{
+    max-width: 1200px;
+}
+.author{
+    text-align: left;
+    margin-left: 18%;
+    font-size: 2rem;
+}
