--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,79 +1,166 @@
 .teaser-container {
   width: 100%;
 }
+.teaser-text {
+  position: absolute;
+  z-index: 200;
+  width: 40%;
+  padding: 120px 0;
+  margin-left: 10%;
+  text-align: justify;
+}
 .teaser-pre {
-  text-align: center;
-  font-size: 46px;
-  letter-spacing: 2px;
-  color: #464553;
-  font-family:Georgia, 'Times New Roman', Times, serif
+  font-size: 48px;
+  letter-spacing: 3px;
+  font-weight: 200;
+  margin: 30px 0;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.teaser-par {
+  color: #333;
+  font: 400 16px/1.5 "freightsanslight", "Lato", "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
+  line-height: 28px;
+  font-size: 20px;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: 300;
 }
 .teaser-top {
+  background-image: url(./teaser.svg);
+  background-size: auto 700px;
+  background-position: 50% 0;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   width: 100%;
-  text-align: center;
-  padding: 2% 2% 1% 2%;
+  height: 620px;
+  margin-bottom: 30px;
 }
-.teaser- bottom {
+.teaser-bottom {
   padding: 2% 2%;
 }
-.teaser-Btn {
-  display: flex;
-  justify-content: space-around;
-  padding: 2% 40% 0 40%;
-}
-.teaser-Btn :hover {
-  cursor: pointer;
-  transform: scale(1.05);
-  transition: all 0.2s linear;
-}
-.teaserStartBtn {
-  border: none;
-  height: 60px;
-  width: 140px;
-  background-color: rgba(72, 121, 255, 0.874);
-  color: #fff;
-  padding: 0px 15px;
-  border-radius: 8px;
-  font-size: 19px;
-  font-weight: 600;
-  transition: all 0.2s linear;
-}
-.teaserTutorialBtn {
-  background-color: #fff;
-  border-color: rgba(70, 69, 83, 0.15);
-  height: 60px;
-  width: 140px;
-  color: #464553;
-  padding: 0px 15px;
-  border-radius: 8px;
+.teaserBtn {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
-  font-weight: 600;
-  transition: all 0.2s linear;
+  font-weight: 700;
+  padding: 10px 20px;
+  background: #007acd;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  margin: 10px 10px 0 0;
+  transition: all 0.2s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
-.teaser-text:hover{
-  cursor:default
+.teaserBtn:hover {
+  background: #1b98eb;
+  cursor: pointer;
 }
-.teaser-img{
+.teaser-text:hover {
+  cursor: default;
+}
+.teaser-img {
   width: 60%;
   object-fit: cover;
   border-radius: 8px;
 }
-
-#show-box {
-  margin: 1% 20%;
+.feature-container {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 16%;
+  margin-top: 70px;
 }
-
-.show {
+.feature-inner-container-row {
+  width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  /* margin: 1% 15%; */
 }
-.show-item {
-  /* flex-basis: calc(24%); */
-  margin-bottom: 10px;
+.sub-feature-inner-container {
+  flex: 1 1;
+  padding: 30px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+.sub-feature-inner-container h5 {
+  color: #000;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  letter-spacing: 3px;
+  font-weight: 200;
+  margin: 30px 0;
+  text-transform: uppercase;
   text-align: center;
-  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
-  /* position: relative; */
+  margin: 6px 0;
+  font-size: 24px;
+}
+.sub-feature-inner-container p {
+  text-align: center;
+  color: #333;
+  font: 400 16px/1.5 "freightsanslight", "Lato", "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
+  line-height: 28px;
+  font-weight: 300;
+  font-size: 20px;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+.split {
+  /* margin: 0;
+  width: 100%; */
+  float: left;
+  width: 120px;
+  height: 1px;
+  border-top: 1px solid #aaa;
+  margin-left: calc(50% - 60px);
+}
+.img-div {
+  width: 220px;
+  height: 220px;
+  border-radius: 50%;
+  margin: 20px auto;
+  background-size: 100%;
+}
+.feature-container h4 {
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  font-size: 28px;
+  color: #000;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  letter-spacing: 3px;
+  font-weight: 200;
+  margin: 30px 0;
+}
+.feature-inner-container-col {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.feature-text {
+  flex: 1 1;
+  box-sizing: border-box;
+  padding: 0;
+  text-align: center;
+}
+.feature-text p {
+  color: #333;
+  font: 400 16px/1.5 "freightsanslight", "Lato", "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
+  line-height: 28px;
+  font-size: 20px;
+  display: block;
+  font-weight: 300;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  text-align: center;
+}
+.feature-illus {
+  margin: 0 auto;
+  width: 1020px;
 }
