--- a/src/components/Tutorial/Tutorial.css
+++ b/src/components/Tutorial/Tutorial.css
@@ -138,7 +138,7 @@ ul {
   width: 100%;
 }
 .spec-img {
-  width: 90%;
+  width: 97%;
 }
 .selection-img {
   width: 90%;
@@ -148,6 +148,9 @@ ul {
 }
 .loading-img{
   width: 90%;
+}
+.next-img {
+  width: 97%;
 }
 .sub3title {
   text-align: left;
