:sparkles: update photo

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -98,7 +98,7 @@
   background-size: 100% auto;
 }
 .gt {
-  background-image: url("./img/gt.jpg");
+  background-image: url("./img/gt.JPG");
   background-size: 100% auto;
 }
 .shy {
@@ -114,7 +114,7 @@
 }
 
 .yhw {
-  background-image: url("./img/yhw.jpg");
+  background-image: url("./img/yhw.JPG");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
